Added some planets and improved the map display

--- a/SpaceRogueRevolution/SpaceRogueRevolution.csproj
+++ b/SpaceRogueRevolution/SpaceRogueRevolution.csproj
@@ -139,6 +139,12 @@
   <ItemGroup>
     <Content Include="Content\Images\blank.png" />
     <Content Include="Content\Images\dart.png" />
+    <Content Include="Content\Images\freighter.png" />
+    <Content Include="Content\Images\pirate.png" />
+    <Content Include="Content\Images\planetblue.png" />
+    <Content Include="Content\Images\planetbrown.png" />
+    <Content Include="Content\Images\planetwhite.png" />
+    <Content Include="Content\Images\sun.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -253,7 +259,7 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>0</DevelopmentServerPort>
+          <DevelopmentServerPort>50318</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:50266/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
