Added stacks more game classes and some stupidly simple factory classes and added the client side basic mouse down functionality

--- a/SpaceRogueRevolution/SpaceRogueRevolution.csproj
+++ b/SpaceRogueRevolution/SpaceRogueRevolution.csproj
@@ -132,15 +132,19 @@
     </Compile>
     <Compile Include="Models\Commands\Command.cs" />
     <Compile Include="Models\Commands\Coord.cs" />
+    <Compile Include="Models\Factory\JobFactory.cs" />
+    <Compile Include="Models\Factory\PlanetFactory.cs" />
+    <Compile Include="Models\Factory\SpaceshipFactory.cs" />
     <Compile Include="Models\GameObjects\BaseGameObject.cs" />
     <Compile Include="Models\GameObjects\Galaxy.cs" />
     <Compile Include="Models\Commands\IGameControl.cs" />
     <Compile Include="Models\Commands\KeyBoardGameControl.cs" />
-    <Compile Include="Models\GameObjects\Jobs.cs" />
+    <Compile Include="Models\GameObjects\Job.cs" />
     <Compile Include="Models\GameObjects\Planet.cs" />
     <Compile Include="Models\GameObjects\Spaceship.cs" />
     <Compile Include="Models\GameObjects\Weapon.cs" />
     <Compile Include="Models\Tile.cs" />
+    <Compile Include="Models\Utility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
