lots of fixes and game object code and planets rendering ok now - client side detecting mouse down and describing the planet

--- a/SpaceRogueRevolution/SpaceRogueRevolution.csproj
+++ b/SpaceRogueRevolution/SpaceRogueRevolution.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\GameObjects\Galaxy.cs" />
     <Compile Include="Models\Commands\IGameControl.cs" />
     <Compile Include="Models\Commands\KeyBoardGameControl.cs" />
+    <Compile Include="Models\GameObjects\Imapable.cs" />
     <Compile Include="Models\GameObjects\Job.cs" />
     <Compile Include="Models\GameObjects\Planet.cs" />
     <Compile Include="Models\GameObjects\Spaceship.cs" />
