--- a/SpaceRogueRevolution/Web.config
+++ b/SpaceRogueRevolution/Web.config
@@ -19,6 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <trace enabled="true" />
     <httpRuntime />
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
