--- a/SpaceRogueRevolution/packages.config
+++ b/SpaceRogueRevolution/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
-  <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
-  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
+  <package id="Glimpse" version="1.0.0-rc2" targetFramework="net40" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
@@ -24,6 +23,4 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
-  <package id="NHibernate" version="3.3.2.4000" targetFramework="net40" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
